# snapcase

./: .gitignore  Cargo.toml  commands.txt  icde_experiments.sh  icml-experiments.fish  paper_experiments.sh  vldb_experiments.sh
notebooks/: tifu-knn-mini-example.ipynb
python/: dataset.py  lsh.py  prediction_and_evaluation.py
python/baselines/: commands.txt  tifu_deletion_performance.py  tifuknn-retraining.ipynb  tifuknn.py  vs_deletion_performance.py  vsknn-retraining.ipynb  vsknn.py
results/: eval_results.txt  notes.md
src/: lib.rs
src/io/: itembased.rs  mod.rs  tifuknn.rs  vsknn.rs
src/itembased/: mod.rs
src/tifuknn/: aggregation.rs  dataflow.rs  hyperparams.rs  minhash.rs  mod.rs  projection.rs  types.rs
src/vsknn/: dataflow.rs  mod.rs  types.rs
