[package]
name = "serenesia"
version = "0.1.0"
authors = ["ssc <ssc@apache.org>"]
edition = "2018"

[[bin]]
name = "vsknn_replay_from_file"
path = "src/bin/vsknn_replay_from_file.rs"

[[bin]]
name = "tifuknn_example"
path = "src/bin/tifuknn_example.rs"

[[bin]]
name = "play"
path = "src/bin/play.rs"

[dependencies]
#timely = "0.11.1"
#differential-dataflow = "0.11.0"
timely = "0.12.0"
differential-dataflow = "0.12.0"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
itertools = "0.9.0"
fnv = "1.0.2"
csv = "1.0"
rand="0.6"
