[package]
name = "snapcase"
version = "0.1.0"
authors = ["ssc <ssc@apache.org>"]
edition = "2018"

[[bin]]
name = "vsknn_replay_from_file"
path = "src/bin/vsknn_replay_from_file.rs"

[[bin]]
name = "vsknn_experiments"
path = "src/bin/vsknn_experiments.rs"

[[bin]]
name = "tifuknn_replay_from_file"
path = "src/bin/tifuknn_replay_from_file.rs"

[[bin]]
name = "tifuknn_example_incremental"
path = "src/bin/tifuknn_example_incremental.rs"

[[bin]]
name = "icde_tifu_deletion_performance"
path = "src/bin/icde_tifu_deletion_performance.rs"

[[bin]]
name = "icde_vs_deletion_performance"
path = "src/bin/icde_vs_deletion_performance.rs"

# https://github.com/blas-lapack-rs/blas-lapack-rs.github.io/wiki
[dependencies]
timely = "0.12.0"
differential-dataflow = "0.12.0"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
itertools = "0.9.0"
fnv = "1.0.2"
csv = "1.0"
rand="0.6"
datasketch-minhash-lsh = "0.0.1"
path-absolutize = "3.0.10"
